--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -5408,7 +5408,9 @@ textarea {
   .tap-target-wrapper.open .tap-target-wave::after {
     visibility: visible;
     animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-    transition: opacity .3s, transform .3s, visibility 0s 1s; }
+    transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s; }
 
 .tap-target {
   position: absolute;
@@ -5443,7 +5445,9 @@ textarea {
     transition: transform .3s; }
   .tap-target-wave::after {
     visibility: hidden;
-    transition: opacity .3s, transform .3s, visibility 0s;
+    transition: opacity .3s,
+ transform .3s,
+ visibility 0s;
     z-index: -1; }
 
 .tap-target-origin {
@@ -5499,7 +5503,7 @@ header {
   justify-content: center;
   position: relative;
   margin-bottom: 6rem;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/headercat.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/headercat.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -5614,7 +5618,7 @@ header {
   position: relative;
   margin-bottom: 6rem;
   text-align: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/joinuscat.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/joinuscat.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; }
@@ -5711,7 +5715,7 @@ header {
 
 .counter {
   padding: 4rem 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/countercat.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/countercat.jpg");
   background-position: center 40%;
   background-repeat: no-repeat;
   background-size: cover;
